1998-04-03  Tanaka Akira  <akr@jaist.ac.jp>

	* eword-decode.el (eword-analyze-atom): Set enable-multibyte-characters
	as nil when calling `string-match'.

1998-03-23  Tanaka Akira  <akr@jaist.ac.jp>

	* eword-decode.el (eword-decode-header): Set default-mime-charset when
	calling `eword-decode-region'.

1998-03-22  Tanaka Akira  <akr@jaist.ac.jp>

	* eword-decode.el (eword-analyze-atom): Treat encoded-word immediately
	after an atom.

1998-03-22  Tanaka Akira  <akr@jaist.ac.jp>

	* eword-decode.el (eword-after-encoded-word-regexp): New constant.
	eword-encoded-text-in-phrase-regexp: New constant.
	eword-encoded-word-in-phrase-regexp: New constant.
	eword-after-encoded-word-in-phrase-regexp: New constant.
	eword-encoded-text-in-comment-regexp: New constant.
	eword-encoded-word-in-comment-regexp: New constant.
	eword-after-encoded-word-in-comment-regexp: New constant.
	eword-encoded-text-in-quoted-string-regexp: New constant.
	eword-encoded-word-in-quoted-string-regexp: New constant.
	eword-after-encoded-word-in-quoted-string-regexp: New constant.
	eword-decode-sticked-encoded-word: Update DOC-STRING.
	eword-decode-quoted-encoded-word: Update DOC-STRING.
	eword-decode-first-encoded-words: Add argument eword-regexp.
	eword-decode-comment-string: Use `eword-encoded-word-in-comment-regexp'
	and `eword-after-encoded-word-in-comment-regexp'.
	eword-decode-quoted-string : Use
	`eword-encoded-word-in-quoted-string-regexp' and
	`eword-after-encoded-word-in-quoted-string-regexp'.
	eword-decode-unstructured-string: Use `eword-encoded-word-regexp' and
	`eword-after-encoded-word-regexp'.
	eword-analyze-encoded-word: Use `eword-encoded-word-in-phrase-regexp'
	and `eword-after-encoded-word-in-phrase-regexp'
	eword-lexical-analyze: Add `default-mime-charset' and `must-unfold' to
	key of cache.
 
1998-03-21  Tanaka Akira  <akr@jaist.ac.jp>

	* eword-decode.el (eword-decode-sticked-encoded-word): Add
	document for relation of RFC2047.